testsuite/tests/properties/invalid_bind/bad_arity/test.lkt
from common import FooNode

class BazNode: FooNode {
    fun conv_prop(@ignored b: Bool): Entity[FooNode] = self
}
